TestSuite/errors/err0432.pas
//exclude
{$savepcu false}
unit err0432;

uses err0433;

end.